Added overflow: hidden in all places

--- a/src/components/channelCreation/channel.scss
+++ b/src/components/channelCreation/channel.scss
@@ -17,6 +17,7 @@
 
 .create-channel__header__back {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -39,6 +40,7 @@
 
 .create-channel__header__text {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -48,6 +50,7 @@
 
 .create-channel__heder__done-btn {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -116,6 +119,7 @@
     border-radius: 10px;
     color: #ffffff;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
