--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -11,6 +11,7 @@
         align-items: center;
         height: 115px;
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -83,6 +84,7 @@ p {
     align-items: center;
     justify-content: center;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -92,6 +94,7 @@ p {
 
 .channel__subscribers {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -107,6 +110,7 @@ p {
 
 .view-chat__header__icons__leave-group {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
