--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -42,6 +42,7 @@
     margin-right: 29px;
     text-align: right;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 500;
     font-size: 13px;
