--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -46,6 +46,7 @@
 
     &__body {
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 1.2em;
