--- a/src/components/ui/blue-button/blue-button.scss
+++ b/src/components/ui/blue-button/blue-button.scss
@@ -8,6 +8,7 @@ $bot-width: 332px;
     border-radius: 6px;
 
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
