--- a/src/components/ui/error-input/error-input.scss
+++ b/src/components/ui/error-input/error-input.scss
@@ -1,5 +1,6 @@
 .error-input {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     color: #FF0000;
     font-weight: 300;
     font-size: 14px;
