--- a/src/components/ui/input/input.scss
+++ b/src/components/ui/input/input.scss
@@ -21,6 +21,7 @@
     background: #18171D;
     border-radius: 16px;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -48,6 +49,7 @@
     border: 1px solid #1B262C;
     border-radius: 10px;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -75,6 +77,7 @@
     background: #18171D;
     border-radius: 16px;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
