--- a/src/components/ui/loginReg/bottom/bottom.css
+++ b/src/components/ui/loginReg/bottom/bottom.css
@@ -11,6 +11,7 @@
     border-radius: 6px;
 
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -26,6 +27,7 @@
 .login-reg-bottom__question {
     text-align: center;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 500;
     font-size: 13px;
