--- a/src/index.scss
+++ b/src/index.scss
@@ -195,7 +195,8 @@ body {
     margin: 0px;
     padding: 0px;
     transition: all 0.3s ease-in-out;
-    font-family: Arial, sans-serif;
+    font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-size: 16px;
     line-height: 1.5;
     overflow-x: hidden;
@@ -235,6 +236,7 @@ section {
     width: 100%;
     min-width: 500px;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-weight: 400;
     background: #131318;
 }
@@ -380,6 +382,7 @@ main {
 
 .font-size-1 {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -391,6 +394,7 @@ main {
 
 .font-size-2 {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -402,6 +406,7 @@ main {
 
 .font-size-3 {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -412,6 +417,7 @@ main {
 
 .font-size-4 {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -421,6 +427,7 @@ main {
 
 .font-size-5 {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -430,6 +437,7 @@ main {
 
 .font-size-6 {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
