--- a/src/uikit/button/button.scss
+++ b/src/uikit/button/button.scss
@@ -102,6 +102,7 @@
     align-self: center;
     justify-content: center;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     letter-spacing: 0.08rem;
     font-weight: 400;
