--- a/src/components/about-us/about-us.scss
+++ b/src/components/about-us/about-us.scss
@@ -43,6 +43,7 @@
         }
         &__text {
             font-family: 'SF Pro Display', sans-serif;
+            overflow: hidden;
             font-style: normal;
             font-weight: 600;
             font-size: 24px;
@@ -59,6 +60,7 @@
         padding: 0px;
         margin-bottom: 100px;
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 40px;
@@ -82,6 +84,7 @@
             }
             &__text {
                 font-family: 'SF Pro Display', sans-serif;
+                overflow: hidden;
                 font-style: normal;
                 font-weight: 400;
                 font-size: 24px;
