--- a/src/components/channelInput/channelInput.scss
+++ b/src/components/channelInput/channelInput.scss
@@ -17,6 +17,7 @@
     outline: none;
     background: none;
     font-family: inherit;
+    overflow: hidden;
     font-size: inherit;
     line-height: inherit;
 }
@@ -29,6 +30,7 @@
     border-radius: 10px;
     color: #ffffff;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
