--- a/src/components/message-input/message-input.scss
+++ b/src/components/message-input/message-input.scss
@@ -43,6 +43,7 @@
             background: #1C1C24;
             border: none;
             font-family: 'SF Pro Display', sans-serif;
+            overflow: hidden;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
