--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -14,6 +14,7 @@
         background-color: #181B23;
         color: #ffffff;
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -26,6 +27,7 @@
         align-self: center;
         justify-content: center;
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         letter-spacing: 0.08rem;
         font-weight: 400;
