--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -57,6 +57,7 @@
           margin: 0px;
           margin-bottom: 20px;
           font-family: 'SF Pro Display', sans-serif;
+          overflow: hidden;
           font-style: normal;
           font-weight: 400;
           font-size: 24px;
@@ -90,6 +91,7 @@
   margin-bottom: 20px;
   z-index: 1;
   font-family: 'SF Pro Display', sans-serif;
+  overflow: hidden;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
