--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -19,6 +19,7 @@ input {
     background-color: #18171D;
     padding: 10px 10px 10px 30px;
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
