--- a/src/components/ui/chatAvatar/chatAvatar.scss
+++ b/src/components/ui/chatAvatar/chatAvatar.scss
@@ -9,6 +9,7 @@
 
 .header__avatar__username {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -20,6 +21,7 @@
 
 .header__avatar__status {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
