--- a/src/components/ui/data-input/data-input.scss
+++ b/src/components/ui/data-input/data-input.scss
@@ -7,6 +7,7 @@
     border: 0px;
 
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 300;
     font-size: 14px;
