--- a/src/components/ui/icon/button.scss
+++ b/src/components/ui/icon/button.scss
@@ -51,6 +51,7 @@
 
 .back-btn__text {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
