--- a/src/components/ui/white-button/white-button.scss
+++ b/src/components/ui/white-button/white-button.scss
@@ -7,6 +7,7 @@ $bot-width: 180px;
   border: 0px;
 
   font-family: 'SF Pro Display', sans-serif;
+  overflow: hidden;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
