--- a/src/uikit/avatar/avatar.scss
+++ b/src/uikit/avatar/avatar.scss
@@ -14,6 +14,7 @@
 
 .login-reg__top_welcome {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 36px;
@@ -25,6 +26,7 @@
 
 .login-reg__top_message {
     font-family: 'SF Pro Display', sans-serif;
+    overflow: hidden;
     font-style: normal;
     font-weight: 300;
     font-size: 36px;
@@ -78,6 +80,7 @@
 
     &__caption {
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -91,6 +94,7 @@
         
         &__username {
             font-family: 'SF Pro Display', sans-serif;
+            overflow: hidden;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
@@ -102,6 +106,7 @@
         
         &__status {
             font-family: 'SF Pro Display', sans-serif;
+            overflow: hidden;
             font-style: normal;
             font-weight: 400;
             font-size: 12px;
@@ -158,6 +163,7 @@
 
     &__caption {
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -171,6 +177,7 @@
         
         &__username {
             font-family: 'SF Pro Display', sans-serif;
+            overflow: hidden;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
@@ -182,6 +189,7 @@
         
         &__status {
             font-family: 'SF Pro Display', sans-serif;
+            overflow: hidden;
             font-style: normal;
             font-weight: 400;
             font-size: 12px;
