--- a/src/uikit/header/header.scss
+++ b/src/uikit/header/header.scss
@@ -12,6 +12,7 @@
         background-color: #181B23;
         color: #ffffff;
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -26,6 +27,7 @@
         background-color: #181B23;
         color: #ffffff;
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -36,6 +38,7 @@
     &__title {
         color: #ffffff;
         font-family: 'SF Pro Display', sans-serif;
+        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 26px;
