--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -40,6 +40,7 @@
     &__avatar {
         padding: 0px;
         margin-bottom: 50px;
+        cursor: pointer;
         &__container{
             max-width: 200px;
         }
