--- a/src/components/message-input/message-input.scss
+++ b/src/components/message-input/message-input.scss
@@ -7,6 +7,14 @@
     border-radius: 10px;
     width: 100%;
 
+    &__maxlength {
+        padding: 3px;
+        width: max-content;
+        position: absolute;
+        right: 25px;
+        bottom: 3px;
+    }
+
     &__attachment {
         overflow: hidden;
         max-height: 30vh;
@@ -87,17 +95,17 @@
 .view-chat__send-message-button {
     position: absolute;
     right: 20px;
-    bottom: 15px;
+    bottom: 20px;
 }
 
 .view-chat__add-attachment-button {
     position: absolute;
     right: 70px;
-    bottom: 18px;
+    bottom: 23px;
 }
 
 .view-chat__add-emoji-sticker {
     position: absolute;
     left: 15px;
-    bottom: 15px;
+    bottom: 20px;
 }
