--- a/src/uikit/avatar/avatar.scss
+++ b/src/uikit/avatar/avatar.scss
@@ -80,7 +80,7 @@
 
     &__caption {
         font-family: 'SF Pro Display', sans-serif;
-        overflow: hidden;
+        // overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
