--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -54,6 +54,8 @@
         padding: 0px 20px;
         max-height: 600px;
         max-width: 460px;
+        overflow: auto;
+        padding-top: 20px;
 
         &__input {
             flex-direction: column;
