--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -14,12 +14,10 @@
         background-color: #181B23;
         color: #ffffff;
         font-family: 'SF Pro Display', sans-serif;
-        overflow: hidden;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
         line-height: 30px;
-        // margin-bottom: 50px;
         margin-bottom: 30px;
     }
 
@@ -28,7 +26,6 @@
         align-self: center;
         justify-content: center;
         font-family: 'SF Pro Display', sans-serif;
-        overflow: hidden;
         font-style: normal;
         letter-spacing: 0.08rem;
         font-weight: 400;
@@ -50,12 +47,10 @@
 
     &__form {
         width: 50%;
-        height: 50%;
         padding: 0px 20px;
-        max-height: 600px;
         max-width: 460px;
-        overflow: auto;
-        padding-top: 20px;
+        // min-height: 700px;
+        // overflow-y: auto;
 
         &__input {
             flex-direction: column;
