--- a/src/index.scss
+++ b/src/index.scss
@@ -288,14 +288,30 @@ button {
     overflow: auto;
 }
 
-.center {
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.overflow-y {
+    overflow-y: auto;
+}
+
+.align-items-center {
     align-items: center;
+}
+
+.justify-content {
     justify-content: center;
 }
 
 .container {
     margin: 0 auto;
     padding: 0px 15px;
+}
+
+.height-100 {
+    max-height: 800px;
+    padding-bottom: 100px;
 }
 
 .w-auto {
@@ -324,8 +340,8 @@ button {
 main {
     width: 100%;
     opacity: 0;
-    animation: fadeIn 1s ease-in-out forwards;
-    animation-delay: 0.3s;
+    animation: fadeIn 0.5s ease-in-out forwards;
+    animation-delay: 0.05s;
 }
 
 .main {
@@ -370,6 +386,9 @@ main {
     width: 100%;
 }
   
+.h-100vh {
+    height: 100vh;
+}
 
 #sidebar {
     
