--- a/src/uikit/chatAvatar/chatAvatar.scss
+++ b/src/uikit/chatAvatar/chatAvatar.scss
@@ -9,7 +9,7 @@
 
 .header__avatar__username {
     font-family: 'SF Pro Display', sans-serif;
-    overflow: hidden;
+    // overflow: hidden;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -21,7 +21,7 @@
 
 .header__avatar__status {
     font-family: 'SF Pro Display', sans-serif;
-    overflow: hidden;
+    // overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
