--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -18,7 +18,6 @@
         font-weight: 400;
         font-size: 24px;
         line-height: 30px;
-        // margin-bottom: 50px;
         margin-bottom: 30px;
     }
 
@@ -48,19 +47,16 @@
 
     &__form {
         width: 50%;
-        height: 50%;
         padding: 0px 20px;
-        max-height: 600px;
         max-width: 460px;
-        overflow: auto;
-        padding-top: 20px;
+        // min-height: 700px;
+        // overflow-y: auto;
 
         &__input {
             flex-direction: column;
             align-items: flex-start;
             justify-content: flex-start;
             min-width: 100%;
-            overflow: hidden;
             &__errors {
                 top: 105%;
                 font-size: 1.2rem;
