--- a/src/uikit/avatar/avatar.scss
+++ b/src/uikit/avatar/avatar.scss
@@ -115,8 +115,8 @@
 
 .avatar {
     padding-top: 10px;
-    width: 200px;
-    height: 200px;
+    min-width: 200px;
+    min-height: 200px;
     object-fit: cover;
     &-border-radius {
         &-50 {
