--- a/src/uikit/input-dropdown-item/dropdown-item.scss
+++ b/src/uikit/input-dropdown-item/dropdown-item.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   min-width: 100%;
   max-height: 50px;
-  background-color: #131318;
+  // background-color: #131318;
   padding: 10px 0px;
   padding-right: 10px;
   cursor: pointer;
