--- a/src/uikit/inputdropdown/inputdropdown.scss
+++ b/src/uikit/inputdropdown/inputdropdown.scss
@@ -5,8 +5,8 @@
     width: 100%;
     height: 100vh;
     max-height: 180px;
-    background: #131318;
-    padding: 10px 0px;
+    background: #181B23; // 131318 
+    padding: 0px 0px 10px 0px;
     opacity: 1;
     z-index: 1;
     overflow-y: auto;
