--- a/src/components/contacts/contacts.pug
+++ b/src/components/contacts/contacts.pug
@@ -1,6 +1,7 @@
 .contacts.flex
     .contacts__head.flex
         !=contactInput
+        !=dropdown
     .contacts__separator
     .contacts__contacts.flex
         for i in contacts
