popup has been adding on delete actions

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -21,8 +21,8 @@
 
 .contact-nickname {
   font-weight: bold;
-  font-size: 16px;
-  margin-bottom: 10px;
+  font-size: 20px;
+  font-family: "SF Pro Display",sans-serif;
 }
 
 .contact-status {
