--- a/src/components/search/search.pug
+++ b/src/components/search/search.pug
@@ -1,4 +1,4 @@
-span.flex
+span.w-80.flex
     input.chats__header__input__search(class=InputClassName type="text" placeholder=PlaceHolder)
 
         
