--- a/src/components/contact-item/contact-item.pug
+++ b/src/components/contact-item/contact-item.pug
@@ -3,6 +3,6 @@
         != avatar
     .contact-info.flex
         .contact-nickname
-            .font-size-4= nickname
+            .contact-nickname__text= nickname
         .contact-status
             .font-size-5= status
