--- a/src/components/contact-item/contact-item.scss
+++ b/src/components/contact-item/contact-item.scss
@@ -20,9 +20,16 @@
 }
 
 .contact-nickname {
-  font-weight: bold;
-  font-size: 16px;
   margin-bottom: 10px;
+  &__text {
+    font-weight: bold;
+    font-size: 18px;
+    font-family: "SF Pro Display",sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    color: #ffffff;
+  }
 }
 
 .contact-status {
