--- a/src/index.scss
+++ b/src/index.scss
@@ -455,7 +455,7 @@ main {
 
 .font-size-5 {
     font-family: 'SF Pro Display', sans-serif;
-    overflow: hidden;
+    // overflow: hidden;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -471,4 +471,30 @@ main {
     font-size: 26px;
     line-height: 29px;
     color: #FFFFFF;
+}
+
+.font-size-7 {
+    font-family: "SF Pro Display",sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    color: #fff;
+}
+
+.w-80 {
+    width: 80%;
+}
+
+.w-85 {
+    width: 85%;
+}
+
+.w-90 {
+    width: 90%;
+}
+
+.padding-right-10 {
+    padding-right: 10px;
 }
