header size has been fixed

--- a/src/uikit/header/header.scss
+++ b/src/uikit/header/header.scss
@@ -6,7 +6,7 @@
     padding: 25px;
 
     &-profile {
-        min-height: 80px;
+        min-height: 100px; // 80
         align-items: center;
         justify-content: center;
         background-color: #181B23;
