--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -8,7 +8,7 @@
     animation-delay: 0.3s;
 
     &__header {
-        min-height: 80px;
+        min-height: 100px; // 80
         align-items: center;
         justify-content: center;
         background-color: #181B23;
