--- a/src/components/new-channel/new-channel.scss
+++ b/src/components/new-channel/new-channel.scss
@@ -6,6 +6,8 @@
     opacity: 0;
     animation: fadeIn 1s ease-in-out forwards;
     animation-delay: 0.3s;
+    flex-grow: 1;
+    overflow: hidden;
 
     &__header {
         min-height: 100px;
@@ -18,7 +20,7 @@
         font-weight: 400;
         font-size: 24px;
         line-height: 30px;
-        margin-bottom: 150px;
+        margin-bottom: 30px;
 
         &__back-btn {
             margin: 0px;
@@ -45,9 +47,7 @@
 
     &__form {
         width: 50%;
-        height: 50%;
         padding: 20px;
-        max-height: 500px;
         max-width: 460px;
 
         &__input {
@@ -72,6 +72,7 @@
             align-items: center;
             min-width: 100%;
             padding-top: 20px;
+            gap: 40px;
         }
 
         &__btn {
