--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -6,6 +6,8 @@
     opacity: 0;
     animation: fadeIn 1s ease-in-out forwards;
     animation-delay: 0.3s;
+    overflow: hidden;
+    flex-grow: 1;
 
     &__header {
         min-height: 100px; // 80
