--- a/src/components/new-profile/profile.scss
+++ b/src/components/new-profile/profile.scss
@@ -7,6 +7,8 @@
     opacity: 0;
     animation: fadeIn 1s ease-in-out forwards;
     animation-delay: 0.3s;
+    flex-grow: 1;
+    overflow: hidden;
 }
 
 .profile__avatar__container {
