--- a/src/uikit/header/header.scss
+++ b/src/uikit/header/header.scss
@@ -40,7 +40,7 @@
         font-weight: 400;
         font-size: 26px;
         line-height: 30px;
-        letter-spacing: 0.1rem;
+        // letter-spacing: 0.1rem;
         margin: auto;
     }
 }
