--- a/src/uikit/icon/button.scss
+++ b/src/uikit/icon/button.scss
@@ -32,7 +32,7 @@
 }
 
 .back-btn {
-    margin-right: 20px;
+    // margin-right: 20px;
     fill: #ffffff;
     transition: fill 0.3s ease-in-out;
 }
