--- a/src/uikit/inputdropdown/inputdropdown.scss
+++ b/src/uikit/inputdropdown/inputdropdown.scss
@@ -4,11 +4,12 @@
     justify-content: flex-start;
     width: 100%;
     height: 100vh;
-    max-height: 180px;
+    max-height: 200px;
     background: #181B23; // 131318 
     padding: 0px 0px 10px 0px;
     opacity: 1;
     z-index: 1;
     overflow-y: auto;
     transition: all 0.3s ease;
+    border-radius: 10px;
 }
