--- a/src/index.scss
+++ b/src/index.scss
@@ -315,7 +315,7 @@ button {
 }
 
 .pb-100 {
-    padding-bottom: 100px;
+    padding-bottom: 70px;
 }
 
 .w-auto {
@@ -324,6 +324,10 @@ button {
 
 .w-40 {
     width: 40px;
+}
+
+.flex-grow-0 {
+    flex-grow: 0 !important;
 }
 
 .position-fixed {
@@ -350,6 +354,8 @@ main {
     opacity: 0;
     animation: fadeIn 0.5s ease-in-out forwards;
     animation-delay: 0.05s;
+    flex-grow: 1;
+    overflow: hidden;
 }
 
 .main {
