--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -3,7 +3,14 @@
     justify-content: flex-start;
     width: 100%;
     background-color: transparent;
+    border-radius: 0px;
     margin-bottom: 10px;
+    transition: background-color border-radius 0.3s ease-in-out;
+    // &:hover {
+    //     background-color: rgba(89, 110, 115, 0.4);
+    //     border-radius: 15px;
+    // }
+    
 
     &__left {
         justify-content: flex-start;
