--- a/src/uikit/input/input.scss
+++ b/src/uikit/input/input.scss
@@ -11,7 +11,8 @@ $input-font-size: 16px;
   margin: 0 auto;
   background: #12131A;
   border-radius: 4px;
-  margin-bottom: 7%;
+  // margin-bottom: 7%;
+  margin-bottom: 12%;
 
   &__label {
     font-family: 'SF Pro Display', sans-serif;
