Added info-popup for all error cases

--- a/src/components/new-channel/new-channel.scss
+++ b/src/components/new-channel/new-channel.scss
@@ -39,6 +39,7 @@
     }
 
     &__avatar {
+        cursor: pointer;
         margin-bottom: 20px;
         &__container{
             max-width: 200px;
