--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -4,12 +4,12 @@
     width: 100%;
     background-color: transparent;
     margin-bottom: 10px;
-    transition: background-color 0.1;
+    transition: background-color 0.2s;
     border-radius: 15px;
 
     &--pressed {
         background-color: #626161;
-        transition: background-color 0.1;
+        transition: background-color 0.2s;
     }
 
     &__left {
