--- a/src/uikit/avatar/avatar.scss
+++ b/src/uikit/avatar/avatar.scss
@@ -38,6 +38,7 @@
     width: 200px;
     height: 200px;
     object-fit: cover;
+    cursor: pointer;
     &-border-radius {
         &-50 {
             border-radius: 50%;
